<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textViewRegistrationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_or_login_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutRegistrationLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrationLabel">

        <TextView
            android:id="@+id/textViewRegistrationLoginLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/login_label_text" />

        <EditText
            android:id="@+id/editTextRegistrationLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRegistrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRegistrationLogin">

        <TextView
            android:id="@+id/textViewRegistrationPasswordLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/password_label_text" />

        <EditText
            android:id="@+id/editTextRegistrationPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRegistrationButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRegistrationPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonRegistrationLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_in_button"
            android:onClick="logIn"/>

        <Button
            android:id="@+id/buttonRegistrationRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sing_up_button"
            android:onClick="singUp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewRegistrationContinueWithoutRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_without_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="continueWithoutRegistration"/>
</androidx.constraintlayout.widget.ConstraintLayout>