<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categorydb.AddCategoryActivity">

    <TextView
        android:id="@+id/textViewCategoryLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_category_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategoryLabel" />

    <Spinner
        android:id="@+id/spinnerCategoryType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCategoryTitle" />

    <LinearLayout
        android:id="@+id/linearLayoutBillButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Button
            android:id="@+id/buttonBillApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_apply"
            android:onClick="apply"/>

        <Button
            android:id="@+id/buttonBillCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:onClick="cancel"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>