<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notesdb.AddNoteActivity">

    <TextView
        android:id="@+id/textViewNoteLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_note_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoteLabel" />

    <LinearLayout
        android:id="@+id/linearLayoutNotePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoteTitle">

        <EditText
            android:id="@+id/editTextNotePrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:inputType="number"
            android:hint="@string/note_price_text"/>

        <TextView
            android:id="@+id/textViewNoteCurrency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewNoteDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutNotePrice"/>

    <LinearLayout
        android:id="@+id/linearLayoutNoteCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoteDate">

        <Spinner
            android:id="@+id/spinnerNoteCategory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9" />

        <Button
            android:id="@+id/buttonNoteAddNewCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_add_label"
            android:layout_weight="1"
            android:onClick="addNewCategory" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNoteBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutNoteCategory">

        <Spinner
            android:id="@+id/spinnerNoteBill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9" />

        <Button
            android:id="@+id/buttonNoteAddNewBill"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_add_label"
            android:layout_weight="1"
            android:onClick="addNewBill"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNoteButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Button
            android:id="@+id/buttonNoteApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_apply"
            android:onClick="apply"/>

        <Button
            android:id="@+id/buttonNoteCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:onClick="cancel"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>